GNOME Bugzilla – Bug 788042
Edits are not applied when setting a background
Last modified: 2017-10-03 17:12:05 UTC
When you set the current photo as a wallpaper or lock screen background, the version used is the unedited one, not what you're seeing.
Yeah, sorry about that. I hit this bug myself a few weeks back.
Created attachment 360271 [details] [review] base-item: Rename save_async as save_to_dir_async
Created attachment 360272 [details] [review] base-item: Add photos_base_item_save_to_file_async
Created attachment 360273 [details] [review] application: Process the item's pipeline when setting the background
Review of attachment 360271 [details] [review]: ++
Comment on attachment 360271 [details] [review] base-item: Rename save_async as save_to_dir_async Thanks for the review!
Review of attachment 360272 [details] [review]: ++ Other than few doubts (I have), I didn't spot any caveats. ::: src/photos-base-item.c @@ +2275,3 @@ + GFile *file = G_FILE (source_object); + GFileOutputStream *stream = NULL; + PhotosBaseItemSaveToFileData *data; Nitpick: Is the ordering (alphabetical) order correct? @@ +2311,3 @@ + GeglBuffer *buffer_zoomed = NULL; + PhotosBaseItemSaveToFileData *data; + Ditto. @@ +2351,3 @@ + GeglNode *graph = NULL; + PhotosBaseItemSaveToFileData *data; + Ditto.
Review of attachment 360273 [details] [review]: ++
(In reply to Umang Jain from comment #7) > Review of attachment 360272 [details] [review] [review]: > Other than few doubts (I have), I didn't spot any caveats. > > ::: src/photos-base-item.c > @@ +2275,3 @@ > + GFile *file = G_FILE (source_object); > + GFileOutputStream *stream = NULL; > + PhotosBaseItemSaveToFileData *data; > > Nitpick: Is the ordering (alphabetical) order correct? > > @@ +2311,3 @@ > + GeglBuffer *buffer_zoomed = NULL; > + PhotosBaseItemSaveToFileData *data; > + > > Ditto. You are right. The GTask needs to be moved below. > @@ +2351,3 @@ > + GeglNode *graph = NULL; > + PhotosBaseItemSaveToFileData *data; > + > > Ditto. We usually put the self/priv at the top followed, by G*, Gegl*, Gtk*, etc.. So, this one looks fine, no?
Created attachment 360349 [details] [review] base-item: Add photos_base_item_save_to_file_async
Comment on attachment 360349 [details] [review] base-item: Add photos_base_item_save_to_file_async I hope I got it right this time. I'm pushing this because I am about to disappear for a few days of vacation.
Pushed to master, gnome-3-26 and gnome-3-24.
Thanks for the reviews!