base-item: Rename save_async as save_to_dir_async

A following patch will add a method to save a BaseItem to a specific
file, as opposed to a generated filename inside a specified directory.
Renaming this method makes its purpose more explicit and prevents any
future ambiguity.

https://bugzilla.gnome.org/show_bug.cgi?id=788042